# geneXref

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  build_db.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: build_database.py  download_database.py  ensembl_gene_ids_to_gene_names.py  map_gene_symbols.py
geneXref/: __init__.py  build.py  download.py  geneXref.py  mapper.py
geneXref/data/: db-20260403.tsv
tests/: conftest.py  test_geneXref.py  test_mapper.py
